# ddns

./: Cargo.toml  Dockerfile  README.md  crd.yaml  example.yaml
.github/workflows/: ci.yaml  master.yaml  other.yaml
src/: cf_dns.rs  control.rs  lib.rs  main.rs  reconcile.rs  spec.rs  trace.rs
src/ddns/: controller.rs  de_dup_reconciler.rs  default_err_policy.rs  default_reconciler.rs  error.rs  error_policy.rs  mod.rs  queue_reconciler.rs  reconcile.rs  watch.rs
src/reconcile/: apply.rs  delete.rs  mod.rs  reflect.rs  schedule.rs  watch.rs
src/service/: mod.rs  trigger.rs  watch.rs
