[package]
name = "ddns"
version = "0.2.1"
edition = "2021"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
kube = { version = "0.69", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.17"
opentelemetry = "0.17"
opentelemetry-jaeger = "0.16"
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
cloudflare = "0.9"
futures-channel = "0.3"
async-trait = "0.1"
itertools = "0.10"
http = "0.2"
